# rsproperties

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REMOTE_ANDROID  envsetup.sh  generate_coverage.sh
.github/: dependabot.yml
.github/workflows/: android-test.yml  ci.yml  security-bot.yml
examples/: socket_service_client.rs  socket_service_server.rs
rsproperties/: Cargo.toml  README.md
rsproperties-service/: Cargo.toml  README.md
rsproperties-service/examples/: example_service.rs  socket_service_client.rs  socket_service_server.rs
rsproperties-service/src/: lib.rs  properties_service.rs  socket_service.rs
rsproperties-service/tests/: common.rs  comprehensive_api_tests.rs  error_handling_tests.rs  example_usage_tests.rs  final_comprehensive_tests.rs  integration_tests.rs  new_api_showcase.rs  parsed_api_tests.rs  performance_tests.rs  set_api_tests.rs  v1_protocol_tests.rs
rsproperties/benches/: props_bench.rs
rsproperties/examples/: getprop.rs  setprop.rs
rsproperties/src/: build_property_parser.rs  context_node.rs  contexts_serialized.rs  errors.rs  file_validation.rs  lib.rs  property_area.rs  property_info.rs  property_info_parser.rs  property_info_serializer.rs  system_properties.rs  system_property_set.rs  trie_builder.rs  trie_node_arena.rs  trie_serializer.rs  wire.rs
rsproperties/tests/: android_compatibility_tests.rs  area_restart_tests.rs  common.rs  comprehensive_api_tests.rs  comprehensive_tests.rs  debug_tests.rs  edge_case_tests.rs  nul_rejection_tests.rs  production_tests.rs  property_change_wait_tests.rs  v1_routing_tests.rs  wait_wake_tests.rs
rsproperties/tests/android/: system_build.prop  vendor_odm_build.prop
rsproperties/tests/common/: mod.rs
src/: build_property_parser.rs  context_node.rs  contexts_serialized.rs  errors.rs  lib.rs  property_area.rs  property_info.rs  property_info_parser.rs  property_info_serializer.rs  socket_service.rs  system_properties.rs  system_property_set.rs  trie_builder.rs  trie_node_arena.rs  trie_serializer.rs
tests/: android_compatibility_tests.rs  common.rs  comprehensive_api_tests.rs  comprehensive_tests.rs  debug_tests.rs  edge_case_tests.rs  example_usage_tests.rs  final_comprehensive_tests.rs  integration_tests.rs  minimal_test.rs  performance_tests.rs  production_tests.rs  really_simple_test.rs  simple_api_tests.rs  socket_service_tests.rs  unique_working_test.rs  verified_api_tests.rs  working_api_tests.rs  working_directory_tests.rs  working_functional_tests.rs  working_tests.rs
tests/android/: product_build.prop  system_dlkm_build.prop  system_ext_build.prop  system_ext_property_contexts  vendor_build.prop  vendor_dlkm_build.prop  vendor_odm_dlkm_build.prop  vendor_property_contexts
