[package]
name = "rsproperties"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["builder"]
builder = []

[dependencies]
rustix = { version = "1.0", features = ["fs", "mm", "thread", "process", "net"] }
log = "0.4"
zerocopy = "0.8"
zerocopy-derive = "0.8"
thiserror = "2.0"
anyhow = "1.0"
pretty-hex = "0.4"

[dev-dependencies]
android_system_properties = "0.1"
env_logger = "0.11"

[[example]]
name = "socket_service_client"
required-features = ["builder"]

[[example]]
name = "socket_service_server"
required-features = ["builder"]