[workspace]
members = [
    "rsproperties",
    "rsproperties-service",
]
resolver = "2"

[workspace.package]
version = "0.2.3"
edition = "2021"
authors = ["Jeff Kim <hiking90@gmail.com>"]
license = "Apache-2.0"
rust-version = "1.77"
repository = "https://github.com/hiking90/rsproperties"
homepage = "https://github.com/hiking90/rsproperties"
documentation = "https://docs.rs/rsproperties"
keywords = ["android", "properties", "system"]
categories = ["os", "api-bindings"]

[workspace.dependencies]
# Common dependencies shared across workspace
rustix = { version = "1.1", features = ["fs", "mm", "thread", "process", "net"] }
log = "0.4"
zerocopy = "0.8"
zerocopy-derive = "0.8"
thiserror = "2.0"
anyhow = "1.0"
pretty-hex = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "net", "io-util", "signal"] }
rsactor = "0.12"

# Dev dependencies
android_system_properties = "0.1"
env_logger = "0.11"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }

[profile.android-release]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
codegen-units = 1
rpath = false
