[package]
name = "rsproperties"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure Rust implementation of Android's property system with cross-platform support, real-time monitoring, and Linux emulation"

[features]
default = []
builder = []
# Enforce the root-ownership check on property files even in builds with
# debug-assertions enabled (which normally relax it for dev/test). For
# release profiles that turn `debug-assertions = true` back on (e.g. for
# overflow checks) without intending to relax file validation.
strict-file-validation = []

[dependencies]
rustix.workspace = true
log.workspace = true
zerocopy.workspace = true
zerocopy-derive.workspace = true
thiserror.workspace = true
pretty-hex.workspace = true

[dev-dependencies]
android_system_properties.workspace = true
env_logger.workspace = true
anyhow.workspace = true
clap.workspace = true
criterion = "0.8"

[[bench]]
name = "props_bench"
harness = false
required-features = ["builder"]

